docs: Insert space between catalogue name and number in SC/21.
This standard is often forgotten or not realised.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -1281,8 +1281,8 @@ using the \texttt{pixsize=}$x$ option on the command-line, where $x$ is in
 arcsec).
 
 \myfig{sc21_crl2688_regrid}{[b!]}{width=0.65\linewidth}{fig:regrid}{
-  The regridded map of CRL2688 displayed with \gaia.}{
-  The regridded map of CRL2688 with the s8a sub-array displayed with \gaia.
+  The regridded map of CRL~2688 displayed with \gaia.}{
+  The regridded map of CRL~2688 with the s8a sub-array displayed with \gaia.
 }
 
 \begin{latexonly}
@@ -1699,7 +1699,7 @@ Configuration File}).
 \end{htmlonly}
 \caption[Iterative models in the time domain]{\small Time-domain
 components of the iterative models. These show the solution for the
-same single bolometer for part of an observation of CRL2688. From top
+same single bolometer for part of an observation of CRL~2688. From top
 to bottom: the \texttt{COM} model containing signal common to all
 bolometers, the \texttt{FLT} model containing residual low-frequency
 noise missed by \texttt{COM}, the \texttt{AST} model with the signal
@@ -1769,10 +1769,10 @@ TIP: You can examine any of these model components as you would the final map.
 Examples of the time traces for a single bolometer from these output
 models is shown in \cref{Figure}{fig:itercomp}{time-domain
 components}. These traces cover a subset of an observation of the
-secondary calibrator CRL2688. You can clearly see the dominance of the
+secondary calibrator CRL~2688. You can clearly see the dominance of the
 \texttt{COM} model which is removed first. The \texttt{FLT} model
 stores the data removed by the high-pass filter. In the \texttt{AST}
-model, CRL2688 is clearly seen as positive spikes which appear when
+model, CRL~2688 is clearly seen as positive spikes which appear when
 the bolometer passes over the source. Finally, the residual signal
 stored in \texttt{RES} is flat, indicating that most of the signal has
 been successfully accounted for by the other model components.
@@ -2086,7 +2086,7 @@ for during processing. We also discuss reducing your data using the
 As discussed in \cref{Section}{sec:dimm}{The
 Dynamic Iterative Map-Maker}, all of the settings for the map-maker
 are stored in configuration files. In this chapter we use
-the default configuration file, \texttt{dimmconfig.lis} to reduce CRL2688,
+the default configuration file, \texttt{dimmconfig.lis} to reduce CRL~2688,
 one of SCUBA-2's secondary calibrators. For an
 overview of the specialised configuration files available see
 \cref{Section}{sec:config}{this section}.
@@ -2263,8 +2263,8 @@ Total samples available from all chunks: 18273302 (3067.53 bolos)
 %\end{center}
 \begin{htmlonly}
 \myfig{sc21_crl2688}{[t!]}{width=0.7\linewidth}{fig:itermap}{
-  CRL2688 produced with \makemap}{
-  Map of CRL2688 produced with the \smurf\ task \makemap\ using the
+  CRL~2688 produced with \makemap}{
+  Map of CRL~2688 produced with the \smurf\ task \makemap\ using the
   iterative algorithm with default parameters.
 }
 \end{htmlonly}
@@ -2280,8 +2280,8 @@ a number of clues in this output that indicate the status of the
 reduction.
 \begin{latexonly}
 \myfig{sc21_crl2688}{[t!]}{width=0.7\linewidth}{fig:itermap}{
-  CRL2688 produced with \makemap}{
-  Map of CRL2688 produced with the \smurf\ task \makemap\ using the
+  CRL~2688 produced with \makemap}{
+  Map of CRL~2688 produced with the \smurf\ task \makemap\ using the
   iterative algorithm with default parameters.
 }
 \end{latexonly}
