docs: Fix non-\texttt filenames in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -2070,7 +2070,7 @@ dimmconfig\_bright\_extended:
 \texttt{dimmconfig\_fix\_blobs} to remove large blooms or blobs of
 spurious emission in your final map.
 
-The point to dimmconfig\_bright\_extended.lis so the parameters are in
+The point to \texttt{dimmconfig\_bright\_extended.lis} so the parameters are in
 addition to those listed above. These files are discussed in more
 detail in \cref{Section}{sec:tweak}{Tailoring your Reduction}.
 
@@ -3202,7 +3202,7 @@ changed. For comprehensive list of the parameters in
 
 The map-maker uses other parameters beyond those described in the
 configuration files. These can be found in the default makemap file,
-smurf\_makemap.def. This file lives in your \$SMURF\_DIR directory or
+\texttt{smurf\_makemap.def}. This file lives in your \$SMURF\_DIR directory or
 online at the \starlink\ \htmladdnormallink{github
 repository}{https://github.com/Starlink/starlink/blob/master/applications/smurf/defaults/smurf\_makemap.def}
 \latex{\footnote{\texttt{https://github.com/Starlink/starlink/blob/master/applications/smurf/defaults/smurf\_makemap.def}}}.
@@ -5070,7 +5070,7 @@ ast.zero\_freeze  &     0 & Prevent the AST mask from changing after a given
 \label{tab:dimmdef}
 \caption{\small The variables listed in \texttt{dimmconfig.lis} and their
 default values. For a fuller description of each, as well as other
-options, see the comments in makemap.def.}
+options, see the comments in \texttt{makemap.def}.}
 \end{footnotesize}
 \end{center}
 \end{table*}
