docs: Turn short subsections into titled paragraphs in SC/21.
This is in the "Writing out models & intermediate maps" section.
In HTML it looked better to have these on one page.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -3236,7 +3236,7 @@ values (no prefix) take priority over qualified values.
 \subsection{\xlabel{inter}Writing out models \& intermediate maps}
 
 
-\subsubsection{itermap}
+\textbf{itermap}\\
 Setting the parameter \texttt{itermap~=~1} writes out an astronomical map after each
 iteration. Setting \texttt{itermap~=~2} adds the QUALITY component.
 These can be visually inspected with
@@ -3345,8 +3345,7 @@ command \stackframes. This cube can then be viewed as a
 `movie' with \gaia, using the animation option to loop through the
 itermaps. See \cref{Figure}{fig:stack}{the box above} for instructions.
 
-\subsection{exportmodel}
-
+\textbf{exportmodel}\\
 This parameter has been discussed in
 \cref{Section}{sec:export}{Exporting individual models} and allowed
 you to see the model that was fit for each component specified by the
