docs: Add two captions missing from the list of figures in SC/21.

--- a/docs/sc/021/sc21.tex
+++ b/docs/sc/021/sc21.tex
@@ -2984,12 +2984,14 @@ For more information on the use of masks by \makemap\ and the
 parameters that affect them see \cref{Section}{sec:tweak}{Tailoring
 your Reduction}.
 
-\myfig{sc21_qualitygaia}{[t!]}{width=0.9\hsize}{fig:qualdisp}{}{
+\myfig{sc21_qualitygaia}{[t!]}{width=0.9\hsize}{fig:qualdisp}{
+   Display of the mask made by the map-maker}{
    Using \gaia\ to display the mask applied by the map-maker. Select the
    QUALITY component of your map.
 }
 
-\myfig{sc21_dispmask3}{[b!]}{width=0.95\hsize}{fig:maskdisp}{}{
+\myfig{sc21_dispmask3}{[b!]}{width=0.95\hsize}{fig:maskdisp}{
+   Contours of an \texttt{AST} mask overlaid on a map}{
    Using \gaia\ to display your map with the \texttt{AST} mask used by
    the map-maker contoured on top.
 }
